--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
-<Files *.png*>
-ForceType applicaton/octet-stream
-</Files>
+<FilesMatch "\.(?i:doc|odf|pdf|rtf|txt)$">
+  Header set Content-Disposition attachment
+</FilesMatch>
