--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,3 @@
-<FilesMatch "\.(?i:png)$">
-  ForceType application/octet-stream
-  Header set Content-Disposition attachment
-</FilesMatch>
+<Files *.mp3> ForceType applicaton/octet-stream Header set Content-Disposition attachment </Files>
+
+<Files *.png> ForceType applicaton/octet-stream Header set Content-Disposition attachment </Files>
